[package]
name = "wasi-tmpfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasi-common = { version = "1.0.1", default-features = false }
tokio = { version = "1.21.2", features = ["sync"], default-features = false }
async-trait = { version = "0.1.57", default-features = false }
anyhow = { version = "1.0", default-features = false }

[dev-dependencies]
tokio = { version = "1.21.2", features = ["sync", "rt", "macros"], default-features = false }
